add input for color theme change with :has()

--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
    <a target="_blank" href="https://www.instagram.com/amanda_almajor/"><img src="./img/instagram.svg" alt="ícone transparente do instagram"></a>
    <a target="_blank" href="https://twitter.com/amanda4213"><img src="./img/twitter.svg" alt="ícone transparente do twitter"></a>
   </footer>
+
+  <ul>
+    <li><input name="color" type="radio" id="pink"></li>
+    <li><input name="color" type="radio" id="dark" checked></li>
+  </ul>
   </section>
 </body>
 
